docs/0.20/_sources/api/gammapy.irf.EnergyDispersion2D.rst.txt
EnergyDispersion2D
==================

.. currentmodule:: gammapy.irf

.. autoclass:: EnergyDispersion2D
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EnergyDispersion2D.axes
      ~EnergyDispersion2D.data
      ~EnergyDispersion2D.default_interp_kwargs
      ~EnergyDispersion2D.default_unit
      ~EnergyDispersion2D.fov_alignment
      ~EnergyDispersion2D.has_offset_axis
      ~EnergyDispersion2D.is_pointlike
      ~EnergyDispersion2D.quantity
      ~EnergyDispersion2D.required_axes
      ~EnergyDispersion2D.tag
      ~EnergyDispersion2D.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~EnergyDispersion2D.cumsum
      ~EnergyDispersion2D.evaluate
      ~EnergyDispersion2D.from_gauss
      ~EnergyDispersion2D.from_hdulist
      ~EnergyDispersion2D.from_table
      ~EnergyDispersion2D.integral
      ~EnergyDispersion2D.integrate_log_log
      ~EnergyDispersion2D.interp_missing_data
      ~EnergyDispersion2D.is_allclose
      ~EnergyDispersion2D.normalize
      ~EnergyDispersion2D.pad
      ~EnergyDispersion2D.peek
      ~EnergyDispersion2D.plot_bias
      ~EnergyDispersion2D.plot_migration
      ~EnergyDispersion2D.read
      ~EnergyDispersion2D.to_edisp_kernel
      ~EnergyDispersion2D.to_hdulist
      ~EnergyDispersion2D.to_table
      ~EnergyDispersion2D.to_table_hdu
      ~EnergyDispersion2D.to_unit
      ~EnergyDispersion2D.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: axes
   .. autoattribute:: data
   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: default_unit
   .. autoattribute:: fov_alignment
   .. autoattribute:: has_offset_axis
   .. autoattribute:: is_pointlike
   .. autoattribute:: quantity
   .. autoattribute:: required_axes
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: cumsum
   .. automethod:: evaluate
   .. automethod:: from_gauss
   .. automethod:: from_hdulist
   .. automethod:: from_table
   .. automethod:: integral
   .. automethod:: integrate_log_log
   .. automethod:: interp_missing_data
   .. automethod:: is_allclose
   .. automethod:: normalize
   .. automethod:: pad
   .. automethod:: peek
   .. automethod:: plot_bias
   .. automethod:: plot_migration
   .. automethod:: read
   .. automethod:: to_edisp_kernel
   .. automethod:: to_hdulist
   .. automethod:: to_table
   .. automethod:: to_table_hdu
   .. automethod:: to_unit
   .. automethod:: write
